[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt="1.1.1"
actix-web="3.3.3"
chrono={version="0.4.19",features=["serde"]}
dotenv="0.15.0"
openssl={version="0.10.38",features=["vendored"]}
serde={version="1.0.134",features=["derive"]}
sqlx={version="0.5.10",features=[
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
]}