[package]
name = "db"
version = "0.1.0"
edition = "2021"          # 2024 还没稳定，先用 2021

[dependencies]
actix-rt        = "2.9"   # 与 actix-web 4.x 配套
actix-web       = "4.4"
chrono          = { version = "0.4", features = ["serde"] }
dotenv          = "0.15"
serde           = { version = "1.0", features = ["derive"] }
# openssl={version="0.10.38",features=["vendored]} #window系统不好用，macOS可考虑
sqlx            = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",  # 纯 Rust TLS，零 native
    "macros",
    "chrono",
] }